# simplefilewatcher

./: CMakeLists.txt  ReadMe.md
include/FileWatcher/: FileWatcher.h  FileWatcherImpl.h  FileWatcherLinux.h  FileWatcherWin32.h
source/: FileWatcher.cpp  FileWatcherLinux.cpp  FileWatcherWin32.cpp
