file(GLOB_RECURSE source_list CONFIGURE_DEPENDS source/*.cpp include/*.h)
add_library(SimpleFileWatcher STATIC ${source_list})
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${source_list})
target_include_directories(SimpleFileWatcher PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
if(MSVC)
	target_compile_options(SimpleFileWatcher PRIVATE /WX /W4)
else()
	target_compile_options(SimpleFileWatcher PRIVATE -Werror -Wall -Wextra -pedantic)
endif()
#target_compile_definitions(SimpleFileWatcher PUBLIC ${PROJECT_DEFINITIONS})
#target_link_libraries(SimpleFileWatcher PUBLIC ${PROJECT_LINK})
target_precompile_headers(SimpleFileWatcher PRIVATE include/FileWatcher/FileWatcherImpl.h)
set_target_properties(SimpleFileWatcher PROPERTIES UNITY_BUILD ON)
set_target_properties(SimpleFileWatcher PROPERTIES FOLDER _Libs)
